--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.1.4",
-    "eol": "^0.9.1",
     "eslint": "^4.19.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
@@ -42,7 +41,8 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.42"
+    "@babel/runtime": "^7.0.0-beta.42",
+    "eol": "^0.9.1"
   },
   "peerDependencies": {
     "graphql": ">= 0.11.7"
